# Awesome-AGI

./: .gitignore  Complete Guide to LLM Fine Tuning for Beginners.ipynb  Gemini API python_quickstart.py  README.md  baichuan API.ipynb  baichuan-13B.ipynb  mistral_7b_instruct_feature_test.py  package.json
06-datasets/: README.md
07-ebooks/: Building Applications with AI Agents (Fifth Early Release) (Michael Albada) (Z-Library).epub
AGI Model Survey/: README.md
AGI-Model-Survey/: README.md
AGI-Paper-List/: README.md
DataSet/: README.md
DataSets/: README.md  datasets.md
Gradio/: 01_创建第一个gradio应用程序.ipynb  04_Interface类的其他参数介绍.ipynb  06_ChatInterface.ipynb
Image/: 未命名绘图.drawio
LLM API/: README.md
LangChain/: Agent 02| create Agent from scratch.ipynb  README.md
LangChain/LangChain_v1.0/DeepAgents/Examples/: pyproject.toml  subagents.json  test_akshare.py  test_research_report.py  test_stock_news.py  test_stock_price_simple.py
LlamaIndex/: 01 Multi-RAG _ 利用GPT4-V及llama-index构建多模态RAG应用.py  02 Product_Reviews_SQL+RAG.ipynb
Model List/: Domain-LLMs.md  README.md  Universal-LLMs.md
Model-Lists/: README.md  model-params.md
Model-Survey/: README.md
NL2SQL/: 01_Vanna.ipynb
Open Tool/: LLM之Generate中参数解读.ipynb  LLM之Generate中常见解码策略解读.ipynb  open-tools.md
Open-Tools/: README.md
Paper List/: README.md
Paper-Lists/: README.md
Prompt/: README.md
RAG/: README.md  向量数据库选择.md
TaskingAI/: README.md
docs/: index.md
platform/: .gitignore  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tmp-check-plans.ts
(+318 files in other folders)
