[project]
name = "deep-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.17.83",
    "dotenv>=0.9.9",
    "langgraph>=1.0.3",
    "openai>=2.7.2",
    "requests>=2.32.5",
    "tavily>=1.1.0",
    "yfinance>=0.2.66",
]